--- a/composer.json
+++ b/composer.json
@@ -16,15 +16,14 @@
     }
   ],
   "require": {
-    "php": ">=7.4",
+    "php": ">=8.0",
     "ext-json": "*",
     "beberlei/assert": "^3.2",
     "psr/cache": "^1.0",
     "psr/http-client": "^1.0.1",
     "psr/http-factory": "^1.0.1",
     "psr/http-message": "^1.0.1",
-    "psr/log": "^1.1",
-    "thecodingmachine/safe": "^1.3"
+    "psr/log": "^1.1"
   },
   "autoload": {
     "psr-4" : {
