--- a/composer.json
+++ b/composer.json
@@ -19,11 +19,11 @@
     "php": ">=8.0",
     "ext-json": "*",
     "beberlei/assert": "^3.2",
-    "psr/cache": "^1.0",
+    "psr/cache": "^1.0|^2.0|^3.0",
     "psr/http-client": "^1.0.1",
     "psr/http-factory": "^1.0.1",
     "psr/http-message": "^1.0.1",
-    "psr/log": "^1.1"
+    "psr/log": "^1.1|^2.0|^3.0"
   },
   "autoload": {
     "psr-4" : {
