--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
     "ext-json": "*",
     "beberlei/assert": "^3.2",
     "psr/cache": "^1.0|^2.0|^3.0",
+    "psr/clock": "^1.0",
     "psr/http-client": "^1.0.1",
     "psr/http-factory": "^1.0.1",
     "psr/http-message": "^1.0.1",
