--- a/composer.json
+++ b/composer.json
@@ -16,14 +16,12 @@
         }
     ],
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.2",
         "ext-json": "*",
         "psr/cache": "^1.0|^2.0|^3.0",
         "psr/clock": "^1.0",
-        "psr/http-client": "^1.0.1",
-        "psr/http-factory": "^1.0.1",
-        "psr/http-message": "^1.0.1",
-        "psr/log": "^1.1|^2.0|^3.0"
+        "psr/log": "^1.1|^2.0|^3.0",
+        "symfony/http-kernel": "^6.2"
     },
     "autoload": {
         "psr-4" : {
